Implemented the webcore actions for changing the text direction.
Signed-off-by: Holger


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27645 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/qt/ChangeLog
+++ b/WebKit/qt/ChangeLog
@@ -2,6 +2,19 @@
 
         Reviewed by Holger.
 
+        Implemented the webcore actions for changing the text direction.
+        
+
+        * Api/qwebpage.cpp:
+        (webActionForContextMenuAction):
+        (QWebPage::triggerAction):
+        (QWebPage::action):
+        * Api/qwebpage.h:
+
+2007-11-09  Simon Hausmann  <hausmann@kde.org>
+
+        Reviewed by Holger.
+
         Fix ContextMenu allocation in the Qt port.
         
         Store all items and submenus value based in ContextMenu and ContextMenuItem.
