userIdleTime() is stubbed in win/SystemTimeWin.cpp, so don't define it twice for the Qt/Windows build.
git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27646 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,5 +1,14 @@
 2007-11-09  Simon Hausmann  <hausmann@kde.org>
 
+        Reviewed by nobody, build/link fix for Qt/Windows.
+
+        userIdleTime() is stubbed in win/SystemTimeWin.cpp, so don't
+        define it twice.
+
+        * platform/qt/TemporaryLinkStubs.cpp:
+
+2007-11-09  Simon Hausmann  <hausmann@kde.org>
+
         Reviewed by Holger.
 
         Fix ContextMenu allocation in the Qt port.
