Rubber stamped by Oliver.
        Make WebCore a dependency of Interfaces.

        * WebKit.vcproj/WebKit.sln:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27656 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-09  Sam Weinig  <sam@webkit.org>
+
+        Rubber stamped by Oliver.
+
+        Make WebCore a dependency of Interfaces.
+
+        * WebKit.vcproj/WebKit.sln:
+
 2007-11-04  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Adam Roben.
