--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,14 @@
+2007-11-10  John Sullivan  <sullivan@apple.com>
+
+        Reviewed by Tim Hatcher
+
+        - fixed <rdar://problem/5394877> Safari should not log unsafe JavaScript attempts when 
+          in private browsing mode (only an issue if Log JavaScript Exceptions is turned on)
+
+        * bindings/js/kjs_window.cpp:
+        (KJS::Window::isSafeScript):
+        Don't log unsafe JavaScript attempts to console or chromeClient if in private browsing mode
+
 2007-11-10  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
