--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-10  Adam Roben  <aroben@apple.com>
+
+        Windows build fix
+
+        Roll out some changes that were (seemingly accidentally) checked in
+        with r27664.
+
+        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.vcproj:
+
 2007-11-10  Darin Adler  <darin@apple.com>
 
         Reviewed by Sam.
