--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-10  Mark Rowe  <mrowe@apple.com>
+
+        Qt Windows build fix.
+
+        * platform/UnicodeRange.h:
+
 2007-11-10  Nikolas Zimmermann  <zimmermann@kde.org>
 
         Reviewed by Eric.
