--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-11  Darin Adler  <darin@apple.com>
+
+        Reviewed by Sam.
+
+        - updated for JSRegExp function changes
+
+        * platform/RegularExpression.cpp:
+        (WebCore::RegularExpression::Private::compile):
+        (WebCore::RegularExpression::match):
+
 2007-11-10  Mark Rowe  <mrowe@apple.com>
 
         Qt Linux build fix.
