--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,5 +1,10 @@
 2007-11-11  Darin Adler  <darin@apple.com>
 
+        * pcre/dftables.pro: Try fixing Qt builds (I looked at qt-win) by adding
+        another include path.
+
+2007-11-11  Darin Adler  <darin@apple.com>
+
         * JavaScriptCore.xcodeproj/project.pbxproj: Try fixing Mac Tiger builds
         by adding another include path.
 
